<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activityMain"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:keepScreenOn="true"
    android:orientation="vertical"
    android:weightSum="1">

    <ToggleButton
        android:id="@+id/showSensorFeaturesToggleButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:textOff="@string/showSensorFeaturesToggleButtonTextOff"
        android:textOn="@string/showSensorFeaturesToggleButtonTextOn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent="0.33" />

    <ToggleButton
        android:id="@+id/showRealTimeDataToggleButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:textOff="@string/showRealTimeDataToggleButtonTextOff"
        android:textOn="@string/showRealTimeDataToggleButtonTextOn"
        app:layout_constraintEnd_toStartOf="@+id/saveLogToggleButton"
        app:layout_constraintStart_toEndOf="@+id/showSensorFeaturesToggleButton"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent="0.33" />

    <ToggleButton
        android:id="@+id/saveLogToggleButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:textOff="@string/saveLogToggleButtonTextOff"
        android:textOn="@string/saveLogToggleButtonTextOn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent="0.33" />

    <es.csic.getsensordata.activities.DataSensorsRecyclerView
        android:id="@+id/dataSensorsRecyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layoutManager="LinearLayoutManager"
        app:layout_constraintBottom_toTopOf="@+id/markPositionButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/showRealTimeDataToggleButton" />

    <Button
        android:id="@+id/markPositionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/MarkPosition"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/cameraPreviewFragmentContainer"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/showRealTimeDataToggleButton" />

</androidx.constraintlayout.widget.ConstraintLayout>
